--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="/images/kode.png">
     
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
