--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="#testimonials-section" class="nav-link">Lời chứng thực</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                <li><a href="#contact-section" class="nav-link">Liên hệ</a></li>
               </ul>
             </nav>
           </div>
@@ -108,6 +105,7 @@
               <div class="col-lg-6 mr-auto">
                 <h1>Kode</h1>
                 <p class="mb-5">Môi trường phát triển phần mềm miễn phí và mã nguồn mở dành cho Pascal</p>
+                <p class="mb-5">Được phát triển bằng cả trái tim bởi đội ngũ lập trình viên trẻ</p>
                 <div>
                   <a href="https://kodestudio.github.io/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu</a>
                 </div>
@@ -153,7 +151,7 @@
               </div>
               <div>
                 <h3>Phong cách viết mã mới</h3>
-                <p>Kode mang đến cho bạn một trải nghiệm tuyệt vời khi viết mã.</p>
+                <p>Kode mang đến cho bạn một trải nghiệm tuyệt vời khi viết mã. Bạn có thể sử dụng mọi Edit Text. Từ NotePad đến Visual Studio. Chỉ cần gõ lệnh "kode myapp" thì mọi thứ sẽ được xây dựng.</p>
                 <p><a href="#">Tìm hiểu thêm</a></p>
               </div>
             </div>
@@ -191,9 +189,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-sentiment_satisfied"></span></span>
               </div>
               <div>
-                <h3>100% Satistified</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Cộng đồng</h3>
+                <p>Chúng tôi sẽ cố gắng tạo những cộng đồng Koder rộng lớn để các bạn có thể tự do trao đổi hơn. Bạn có thể đặt những câu hỏi, tham gia trả lời và nhiều việc khác. Tất cả vì sự phát triển của Kode. Chúng tôi không giới hạn nền tảng cộng đồng. Có thể là Facebook, StackOverFlow, Twitter,... hoặc là hỏi trực tiếp với chúng tôi</p>
+                <p><a href="#">Tìm hiểu thêm</a></p>
               </div>
             </div>
 
@@ -206,9 +204,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-power"></span></span>
               </div>
               <div>
-                <h3>Easy Plugin</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Tính mở cao</h3>
+                <p>Tính mở thể hiện thông qua hệ thống các Plugin, Extension về giao diện, hỗ trợ các bạn trong tương tác với máy chủ. Tất cả đều miễn phí, đều được phát triển từ cộng đồng.</p>
+                <p><a href="#">Tìm hiểu thêm</a></p>
               </div>
             </div>
           </div>
