--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
           <div class="col-lg-5 pr-lg-5 mr-auto mt-5 order-2 order-lg-1">
             <h2 class="text-black">Giao diện trực quan, tự do thiết kế</h2>
-            <p class="mb-4">Giao diện của các ứng dụng được tạo bởi Kode tự động tương thích với hệ điều hành mà nó hoạt động. Trong hình là ứng dụng demo đang chạy trên Windows và Ubuntu.</p>
+            <p class="mb-4">Giao diện của các ứng dụng được tạo bởi Kode tự động tương thích với hệ điều hành mà nó hoạt động. Trong hình là ứng dụng demo đang chạy trên Windows và Ubuntu và Android.</p>
             
             
 
