--- a/index.html
+++ b/index.html
@@ -360,13 +360,13 @@
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="images/quocthinh.jpg" alt="Image" class="img-fluid">
+                  <img src="images/thinh.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <div class="social">
                   <a href="https://www.facebook.com/quocthinhvo.dev"><span class="icon-facebook"></span></a>
                   <a href="https://www.twitter.com/quocthinhvo"><span class="icon-twitter"></span></a>
                   <a href="https://www.instagram.com/quocthinhvo.dev"><span class="icon-instagram"></span></a>
-                  <a href="https://www.www.github.com/quocthinhvo"><span class="icon-github"></span></a>
+                  <a href="https://www.github.com/quocthinhvo"><span class="icon-github"></span></a>
                 </div>
               </div>
               <h2 class="text-black h1">Võ Quốc Thịnh</h2>
@@ -379,7 +379,7 @@
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="images/person_2.jpg" alt="Image" class="img-fluid">
+                  <img src="images/namccc.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
@@ -387,9 +387,9 @@
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
-              <h2 class="text-black h1">John Rooster</h2>
-              <span class="sub-title d-block mb-3">Marketing</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum excepturi corporis qui doloribus perspiciatis ipsa modi accusantium repellat.</p>
+              <h2 class="text-black h1">Phan Hoàng Nam</h2>
+              <span class="sub-title d-block mb-3">Leader Designer</span>
+              <p>Đảm đương mọi việc liên quan đến thiết kế trong dự án</p>
               
             </div>
           </div>
@@ -398,21 +398,21 @@
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="images/person_3.jpg" alt="Image" class="img-fluid">
+                  <img src="images/truongcc.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <div class="social">
-                  <a href="#"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com/profile.php?id=100039568247672"><span class="icon-facebook"></span></a>
                   <a href="#"><span class="icon-twitter"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
-              <h2 class="text-black h1">Will Turner</h2>
-              <span class="sub-title d-block mb-3">Marketing</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum excepturi corporis qui doloribus perspiciatis ipsa modi accusantium repellat.</p>
+              <h2 class="text-black h1">Nguyễn Đoan Trường</h2>
+              <span class="sub-title d-block mb-3">Editor</span>
+              <p>Đảm đương việc chỉnh sửa, viết bài, làm MC và quảng cáo</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
+         <!-- <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
             <div class="person">
               <div class="bio-img">
                 <figure>
@@ -649,26 +649,24 @@
         
       </div>
     </div>
-
+-->
     <div class="footer py-5 text-center">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12">
             <p class="mb-0">
-              <a href="#" class="p-3"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="p-3"><span class="icon-linkedin"></span></a>
-              <a href="#" class="p-3"><span class="icon-pinterest"></span></a>
+              <a href="https://www.facebook.com/kodestudio.page" class="p-3"><span class="icon-facebook"></span></a>
+              <a href="https://www.twitter.com/kodestudio" class="p-3"><span class="icon-twitter"></span></a>
+              <a href="https://www.instagram.com/kodestudio.page" class="p-3"><span class="icon-instagram"></span></a>
+              <a href="https://www.github.com/kodestudio" class="p-3"><span class="icon-github"></span></a>
             </p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This wedsite is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodestudio.github.io" target="_blank" >Kode</a>
+
             </p>
           </div>
         </div>
