--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
       <div class="container">
         <div class="row align-items-center justify-content-center">
 
-          <div class="col-md-12" style="position: relative;" data-aos="fade-up" data-aos-delay="0">
+          <div class="col-md-12" style="position: relative;" data-aos="fade-up" data-aos-delay="200">
             
-            <img src="images/kodefulll.png" alt="Image" class="img-fluid img-absolute">
+            <img src="images/kodelogo.png" alt="Image" class="img-fluid img-absolute">
 
             <div class="row mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-6 mr-auto">
                 <h1>Kode</h1>
                 <p class="mb-5">Môi trường phát triển phần mềm miễn phí và mã nguồn mở dành cho Pascal</p>
-                <p class="mb-5">Được phát triển bằng cả trái tim bởi đội ngũ lập trình viên trẻ</p>
+                <p class="mb-5">Được phát triển bằng cả trái tim</p>
                 <div>
                   <a href="https://kodestudio.github.io/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu</a>
                 </div>
