--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
           <div class="col-md-12" style="position: relative;" data-aos="fade-up" data-aos-delay="200">
             
-            <img src="images/kodelogo.png" alt="Image" class="img-fluid img-absolute">
+            <img src="images/kodelogo.png" alt="Image" class="img-fluid img-absolute" width="100" height="100">
 
             <div class="row mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-6 mr-auto">
