--- a/index.html
+++ b/index.html
@@ -99,14 +99,12 @@
 
           <div class="col-md-12" style="position: relative;" data-aos="fade-up" data-aos-delay="200">
             
-            <img src="images/kodelogo.png" alt="Image" class="img-fluid img-absolute">
+            
 
             <div class="row mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-6 mr-auto">
                 <h1>Kode</h1>
-                <p class="mb-5">Môi trường phát triển phần mềm mới</p>
-                <p class="mb-5">Miễn phí và mã nguồn mở</p>
-                <p class="mb-5">Dành cho Pascal</p>
+                <p class="mb-5">Môi trường phát triển phần mềm miễn phí và mã nguồn mở dành cho Pascal</p>
                 <p class="mb-5">Được phát triển bằng cả trái tim</p>
                 <div>
                   <a href="https://kodestudio.github.io/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu</a>
