--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                     <li class="has-children">
                       <a href="#">Dự án</a>
                       <ul class="dropdown">
-                        
+                        <!--<li><a href="#">Tải xuống</a></li>
+                        <li><a href="#">Tài liệu</a></li>
+                        <li><a href="#">Liên hệ</a></li>-->
                       </ul>
                     </li>
                   </ul>
@@ -219,6 +221,7 @@
           <div class="col-lg-7" data-aos="fade-right">
             <img src="images/undraw_gift_card_6ekc.svg" alt="Image" class="img-fluid">
           </div>
+          <h2 class="section-title">Tính năng nổi bậc</h2>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
             <h2 class="text-black">Communicate and gather feedback</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
