--- a/index.html
+++ b/index.html
@@ -214,16 +214,15 @@
         </div>
       </div>
     </div>
-    <h2 class="section-title">Tính năng nổi bậc</h2>
     <div class="feature-big">
       <div class="container">
         <div class="row mb-5 site-section">
           <div class="col-lg-7" data-aos="fade-right">
-            <img src="images/undraw_gift_card_6ekc.svg" alt="Image" class="img-fluid">
+            <img src="images/kodeconsolewin.PNG" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Communicate and gather feedback</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
+            <h2 class="text-black">Tương tác bằng cơ chế lệnh</h2>
+            <p class="mb-4">Dùng Terminal và gõ những lệnh để tương tác với Kode. Nhanh và cực kì đơn giản.</p>
             
             <div class="author-box" data-aos="fade-left">
               <div class="d-flex mb-4">
