--- a/index.html
+++ b/index.html
@@ -222,19 +222,19 @@
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
             <h2 class="text-black">Tương tác bằng cơ chế lệnh</h2>
-            <p class="mb-4">Dùng Terminal và gõ những lệnh để tương tác với Kode. Nhanh và cực kì đơn giản.</p>
+            <p class="mb-4">Dùng Terminal và gõ những lệnh để tương tác với Kode. Nhanh và cực kì đơn giản. Nếu bạn chưa nhớ được lệnh thì đừng ngần ngại. Hãy gõ "kode help" nhé!!!</p>
             
             <div class="author-box" data-aos="fade-left">
               <div class="d-flex mb-4">
                 <div class="mr-3">
-                  <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded-circle">
+                  <img src="images/quocthinh.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Grey Simpson</strong> <br>
-                  Co-Founder, XYZ Inc.
+                  <strong class="font-weight-bold mb-0">Võ Quốc Thịnh</strong> <br>
+                  Co-Founder and Developer, Kode Inc.
                 </div>
               </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>&ldquo;Xây dựng ứng dụng trên Terminal theo tôi nó có rất nhiều ưu điểm. Mặc dù vậy nhưng chúng tôi sẽ cố gắng đưa đến cho các bạn một IDE với đầy đủ các công cụ chứ không chỉ dừng lại ở việc dùng lệnh&rdquo;</blockquote>
             </div>
           </div>
         </div>
