--- a/index.html
+++ b/index.html
@@ -241,25 +241,25 @@
 
         <div class="mt-5 row mb-5 site-section ">
           <div class="col-lg-7 order-1 order-lg-2" data-aos="fade-left">
-            <img src="images/undraw_metrics_gtu7.svg" alt="Image" class="img-fluid">
+            <img src="images/winbuild.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pr-lg-5 mr-auto mt-5 order-2 order-lg-1">
-            <h2 class="text-black">Communicate and gather feedback</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam</p>
+            <h2 class="text-black">Giao diện trực quan, tự do thiết kế</h2>
+            <p class="mb-4">Giao diện của các ứng dụng được tạo bởi Kode tự động tương thích với hệ điều hành mà nó hoạt động. Trong hình là ứng dụng demo đang chạy trên Windows và Ubuntu.</p>
             
             
 
             <div class="author-box" data-aos="fade-right">
               <div class="d-flex mb-4">
                 <div class="mr-3">
-                  <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle">
+                  <img src="images/namcc.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Kimberly Gush</strong> <br>
-                  Co-Founder, XYZ Inc.
+                  <strong class="font-weight-bold mb-0">Phan Hoàng Nam</strong> <br>
+                  Leader Designer Team, Kode Inc.
                 </div>
               </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>&ldquo;Ứng dụng được thiết kế rất đẹp, tự do. Trong tương lai không xa chúng tôi sẽ thêm nhiều phong cách thiết kế hơn. Trong đó có Material Design.&rdquo;</blockquote>
             </div>
           </div>
         </div>
