--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Gửi" class="btn btn-primary mr-2 mb-2">
+                  <!--<input type="submit" value="Gửi" class="btn btn-primary mr-2 mb-2">-->
+                  <a href="mailto: kodestudio.dev@gmail.com" class="btn btn-primary mr-2 mb-2">Gửi</a>
                 </div>
               </div>
 
