--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
                 <li><a href="#home-section" class="nav-link">Trang Chủ</a></li>
                 <li><a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a></li>
-                <li><a href="#features-section" class="nav-link">Tính năng</a></li>
-                <li><a href="https://www.donate.com" class="nav-link">Donate</a></li>
-                <li class="has-children">
+                <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
+                <li><a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a></li>
+                <li><a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a></li>
+                <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
                   <ul class="dropdown arrow-top">
                     <li><a href="#" target="_blank" class="nav-link"><span class="text-primary">Giới thiệu</span></a></li>
                     <li><a href="#our-team-section" class="nav-link">Nhóm</a></li>
                     <li><a href="#contact-section" class="nav-link">Liên hệ</a></li>
                       </ul>
-                    </li>
+                    </li>-->
                   </ul>
                 </li>
               </ul>
@@ -562,10 +563,10 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/code.png" alt="Image" class="img-fluid">
-              <h2><a href="https://kodestudio.github.io/docs/vi/why_pascal">Tại sao Kode dùng Pascal</a></h2>
+              <h2><a href="https://kodestudio.github.io/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Intro</a></div>
               <p>Bài viết này sẽ nêu lên quan điểm của Quốc Thịnh về ngôn ngữ lập trình và trả lời câu hỏi vì sao Kode lại dùng Pascal</p>
-              <p><a href="https://kodestudio.github.io/docs/vi/why_pascal">Đọc thêm...</a></p>
+              <p><a href="https://kodestudio.github.io/docs/vi/why-pascal">Đọc thêm...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
