--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                <li><a href="#home-section" class="nav-link">Trang Chủ</a></li>
-                <li><a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a></li>
+                <a href="#home-section" class="nav-link">Trang Chủ</a>
+                <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <li><a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a></li>
-                <li><a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a></li>
+                <a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a>
+                <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
                   <ul class="dropdown arrow-top">
