--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                <a href="#home-section" class="nav-link">Trang Chủ</a>
+                <a href="https://kodestudio.github.io" class="nav-link">Trang Chủ</a>
                 <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
                 <a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a>
