--- a/404.html
+++ b/404.html
@@ -9,21 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css404/bootstrap.min.css">
+    <link rel="stylesheet" href="css404/jquery-ui.css">
+    <link rel="stylesheet" href="css404/owl.carousel.min.css">
+    <link rel="stylesheet" href="css404/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css404/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css404/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css404/bootstrap-datepicker.css">
 
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css404/aos.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css404/style.css">
     <link rel="shortcut icon" href="/images/kode.png">
     
   </head>
@@ -222,20 +222,20 @@
     </div>
   </div> <!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
+  <script src="js404/jquery-3.3.1.min.js"></script>
+  <script src="js404/jquery-ui.js"></script>
+  <script src="js404/popper.min.js"></script>
+  <script src="js404/bootstrap.min.js"></script>
+  <script src="js404/owl.carousel.min.js"></script>
+  <script src="js404/jquery.countdown.min.js"></script>
+  <script src="js404/bootstrap-datepicker.min.js"></script>
+  <script src="js404/jquery.easing.1.3.js"></script>
+  <script src="js404/aos.js"></script>
+  <script src="js404/jquery.fancybox.min.js"></script>
+  <script src="js404/jquery.sticky.js"></script>
 
   
-  <script src="js/main.js"></script>
+  <script src="js404/main.js"></script>
   
   </body>
 </html>
