--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/install.png" alt="Image" class="img-fluid">
+             <!-- <img src="images/install.png" alt="Image" class="img-fluid">-->
               <h2><a href="https://kodestudio.github.io/docs/vi/install">Hướng dẫn cài đặt Kode</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span>14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Basic</a></div>
               <p>Bài viết này sẽ hướng dẫn các bạn cách cài đặt Kode vào máy tính chỉ với vài bước đơn giản</p>
@@ -112,7 +112,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/code.png" alt="Image" class="img-fluid">
+              <!--<img src="images/code.png" alt="Image" class="img-fluid">-->
               <h2><a href="https://kodestudio.github.io/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Intro</a></div>
               <p>Bài viết này sẽ nêu lên quan điểm của Quốc Thịnh về ngôn ngữ lập trình và trả lời câu hỏi vì sao Kode lại dùng Pascal</p>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/design.png" alt="Image" class="img-fluid">
+             <!-- <img src="images/design.png" alt="Image" class="img-fluid">-->
               <h2><a href="https://kodestudio.github.io/docs/vi/design">Thiết kế giao diện ứng dụng</a></h2>
               <div class="meta mb-4">Phan Hoàng Nam <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Design</a></div>
               <p>Làm sao biến ứng dụng của bạn trở nên ngầu hơn. Hãy đọc bài viết này...</p>
