--- a/404.html
+++ b/404.html
@@ -100,6 +100,9 @@
         <h1>Không tìm thấy liên kết</h1>
         <h3>Hãy thử tham khảo các bài viết được gợi ý hoặc báo cáo lỗi với chúng tôi nhé!</h3>
       </div>
+      <div class="col-12 text-center">
+      <a href="https://kodestudio.github.io" class="btn btn-primary mr-2 mb-2">Trang chủ</a>
+    </div>
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
