--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
                 <a href="https://kodestudio.github.io" class="nav-link">Trang Chủ</a>
                 <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a>
+                <a href="https://kodestudio.github.io/donate" class="nav-link">Tài trợ</a>
                 <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
