--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="#home-section" class="nav-link">Trang Chủ</a>
                 <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <a href="https://kodestudio.github.io/donate" class="nav-link">Donate</a>
+                <a href="https://kodestudio.github.io/donate" class="nav-link">Tài trợ</a>
                 <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
@@ -106,7 +106,7 @@
                   <a href="https://kodestudio.github.io/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu.</a>
                 </div>
                 <div>
-                  <a href="https://www.github.com/kodestudio" class="btn btn-primary mr-2 mb-2">Tặng một ly Cafe cho Kode Team ❤</a>
+                  <a href="https://kodestudio.github.io/donate" class="btn btn-primary mr-2 mb-2">Tặng một ly Cafe cho Kode Team ❤</a>
                 </div>
               </div>
               
