--- a/donate/index.html
+++ b/donate/index.html
@@ -120,7 +120,7 @@
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
             <h2 class="text-black">Viettel Pay</h2>
-            <p class="mb-4">Do hiện tại chúng tôi vẫn chưa có tài khoản ngân hàng (do chưa có giấy CMND) nên bạn vui lòng tài trợ thông quan Viettel Pay</p>      
+            <p class="mb-4">Do hiện tại chúng tôi vẫn chưa có tài khoản ngân hàng (do chưa có giấy CMND) nên bạn vui lòng tài trợ thông qua Viettel Pay</p>      
           </div>
         </div>
 
