cập nhật địa chỉ

--- a/donate/index.html
+++ b/donate/index.html
@@ -55,18 +55,18 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-md-3 col-xl-4  d-block">
-            <h1 class="mb-0 site-logo"><a href="https://kodestudio.github.io" class="text-black h2 mb-0">Kode<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="https://kodelang.dev" class="text-black h2 mb-0">Kode<span class="text-primary">.</span> </a></h1>
           </div>
 
           <div class="col-12 col-md-9 col-xl-8 main-menu">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                <a href="https://kodestudio.github.io" class="nav-link">Trang Chủ</a>
-                <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
+                <a href="https://kodelang.dev" class="nav-link">Trang Chủ</a>
+                <a href="https://kodelang.dev/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <a href="https://kodestudio.github.io/donate" class="nav-link">Tài trợ</a>
-                <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
+                <a href="https://kodelang.dev/donate" class="nav-link">Tài trợ</a>
+                <a href="https://kodelang.dev/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
                   <ul class="dropdown arrow-top">
@@ -205,7 +205,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodestudio.github.io" target="_blank" >Kode</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodelang.dev" target="_blank" >Kode</a>
             </p>
           </div>
         </div>
