--- a/404.html
+++ b/404.html
@@ -55,18 +55,18 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-md-3 col-xl-4  d-block">
-            <h1 class="mb-0 site-logo"><a href="https://kodestudio.github.io" class="text-black h2 mb-0">Kode<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="https://kodelang.dev" class="text-black h2 mb-0">Kode<span class="text-primary">.</span> </a></h1>
           </div>
 
           <div class="col-12 col-md-9 col-xl-8 main-menu">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                <a href="https://kodestudio.github.io" class="nav-link">Trang Chủ</a>
-                <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
+                <a href="https://kodelang.dev" class="nav-link">Trang Chủ</a>
+                <a href="https://kodelang.dev/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <a href="https://kodestudio.github.io/donate" class="nav-link">Tài trợ</a>
-                <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
+                <a href="https://kodelang.dev/donate" class="nav-link">Tài trợ</a>
+                <a href="https://kodelang.dev/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
                   <ul class="dropdown arrow-top">
@@ -101,31 +101,31 @@
         <h3>Hãy thử tham khảo các bài viết được gợi ý hoặc báo cáo lỗi với chúng tôi nhé!</h3>
       </div>
       <div class="col-12 text-center">
-      <a href="https://kodestudio.github.io" class="btn btn-primary mr-2 mb-2">Trang chủ</a>
+      <a href="https://kodelang.dev" class="btn btn-primary mr-2 mb-2">Trang chủ</a>
     </div>
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
              <!-- <img src="images/install.png" alt="Image" class="img-fluid">-->
-              <h2><a href="https://kodestudio.github.io/docs/vi/install">Hướng dẫn cài đặt Kode</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/install">Hướng dẫn cài đặt Kode</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span>14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Basic</a></div>
               <p>Bài viết này sẽ hướng dẫn các bạn cách cài đặt Kode vào máy tính chỉ với vài bước đơn giản</p>
-              <p><a href="https://kodestudio.github.io/docs/vi/install">Đọc thêm...</a></p>
+              <p><a href="https://kodelang.dev/docs/vi/install">Đọc thêm...</a></p>
             </div> 
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <!--<img src="images/code.png" alt="Image" class="img-fluid">-->
-              <h2><a href="https://kodestudio.github.io/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Intro</a></div>
               <p>Bài viết này sẽ nêu lên quan điểm của Quốc Thịnh về ngôn ngữ lập trình và trả lời câu hỏi vì sao Kode lại dùng Pascal</p>
-              <p><a href="https://kodestudio.github.io/docs/vi/why-pascal">Đọc thêm...</a></p>
+              <p><a href="https://kodelang.dev/docs/vi/why-pascal">Đọc thêm...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
              <!-- <img src="images/design.png" alt="Image" class="img-fluid">-->
-              <h2><a href="https://kodestudio.github.io/docs/vi/design">Thiết kế giao diện ứng dụng</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/design">Thiết kế giao diện ứng dụng</a></h2>
               <div class="meta mb-4">Phan Hoàng Nam <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Design</a></div>
               <p>Làm sao biến ứng dụng của bạn trở nên ngầu hơn. Hãy đọc bài viết này...</p>
               <p><a href="#">Đọc thêm...</a></p>
@@ -217,7 +217,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodestudio.github.io" target="_blank" >Kode</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodelang.dev" target="_blank" >Kode</a>
             </p>
           </div>
         </div>
