--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
                 <a href="#home-section" class="nav-link">Trang Chủ</a>
-                <a href="https://kodestudio.github.io/docs" class="nav-link">Tài liệu</a>
+                <a href="https://kodelang.dev/docs" class="nav-link">Tài liệu</a>
                 <!--<li><a href="#features-section" class="nav-link">Tính năng</a></li>-->
-                <a href="https://kodestudio.github.io/donate" class="nav-link">Tài trợ</a>
-                <a href="https://kodestudio.github.io/community" class="nav-link">Cộng đồng</a>
+                <a href="https://kodelang.dev/donate" class="nav-link">Tài trợ</a>
+                <a href="https://kodelang.dev/community" class="nav-link">Cộng đồng</a>
                 <!--<li class="has-children">
                   <a href="#about-section" class="nav-link">Thêm</a>
                   <ul class="dropdown arrow-top">
@@ -103,10 +103,10 @@
                 <h1>Kode</h1>
                 <p class="mb-5">Môi trường phát triển phần mềm miễn phí và mã nguồn mở dành cho Pascal.</p>
                 <div>
-                  <a href="https://kodestudio.github.io/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu.</a>
+                  <a href="https://kodelang.dev/docs/vi/install" class="btn btn-primary mr-2 mb-2">Nào cùng bắt đầu.</a>
                 </div>
                 <div>
-                  <a href="https://kodestudio.github.io/donate" class="btn btn-primary mr-2 mb-2">Tặng một ly Cafe cho Kode Team ❤</a>
+                  <a href="https://kodelang.dev/donate" class="btn btn-primary mr-2 mb-2">Tặng một ly Cafe cho Kode Team ❤</a>
                 </div>
               </div>
               
@@ -137,7 +137,7 @@
               <div>
                 <h3>Dễ học dễ dùng</h3>
                 <p>Kode sử dụng ngôn ngữ lập trình Pascal nên rất dễ học.Với ít các quy tắc trong quá trình phát triển, đảm bảo tính tự do cho các DEV</p>
-                <p><a href="https://kodestudio.github.io/docs/vi/pascal">Tìm hiểu thêm</a></p>
+                <p><a href="https://kodelang.dev/docs/vi/pascal">Tìm hiểu thêm</a></p>
               </div>
             </div>
 
@@ -336,7 +336,7 @@
               <li>Laz4Android</li>
               <li>IntelliJ-based IDEs (Sẽ xuất hiện trong IDE)</li>
             </ul>
-            <p><a href="https://kodestudio.github.io/docs/vi/thanks" class="btn btn-primary">Xem thêm</a></p>
+            <p><a href="https://kodelang.dev/docs/vi/thanks" class="btn btn-primary">Xem thêm</a></p>
           </div>
         </div>
 
@@ -554,25 +554,25 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/install.png" alt="Image" class="img-fluid">
-              <h2><a href="https://kodestudio.github.io/docs/vi/install">Hướng dẫn cài đặt Kode</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/install">Hướng dẫn cài đặt Kode</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span>14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Basic</a></div>
               <p>Bài viết này sẽ hướng dẫn các bạn cách cài đặt Kode vào máy tính chỉ với vài bước đơn giản</p>
-              <p><a href="https://kodestudio.github.io/docs/vi/install">Đọc thêm...</a></p>
+              <p><a href="https://kodelang.dev/docs/vi/install">Đọc thêm...</a></p>
             </div> 
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/code.png" alt="Image" class="img-fluid">
-              <h2><a href="https://kodestudio.github.io/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/why-pascal">Tại sao Kode dùng Pascal</a></h2>
               <div class="meta mb-4">Võ Quốc Thịnh <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Intro</a></div>
               <p>Bài viết này sẽ nêu lên quan điểm của Quốc Thịnh về ngôn ngữ lập trình và trả lời câu hỏi vì sao Kode lại dùng Pascal</p>
-              <p><a href="https://kodestudio.github.io/docs/vi/why-pascal">Đọc thêm...</a></p>
+              <p><a href="https://kodelang.dev/docs/vi/why-pascal">Đọc thêm...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/design.png" alt="Image" class="img-fluid">
-              <h2><a href="https://kodestudio.github.io/docs/vi/design">Thiết kế giao diện ứng dụng</a></h2>
+              <h2><a href="https://kodelang.dev/docs/vi/design">Thiết kế giao diện ứng dụng</a></h2>
               <div class="meta mb-4">Phan Hoàng Nam <span class="mx-2">&bullet;</span> 14/02/2020<span class="mx-2">&bullet;</span> <a href="#">Design</a></div>
               <p>Làm sao biến ứng dụng của bạn trở nên ngầu hơn. Hãy đọc bài viết này...</p>
               <p><a href="#">Đọc thêm...</a></p>
@@ -664,7 +664,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodestudio.github.io" target="_blank" >Kode</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://kodelang.dev" target="_blank" >Kode</a>
             </p>
           </div>
         </div>
