cập nhật donate

--- a/index.html
+++ b/index.html
@@ -230,9 +230,6 @@
                 </div>
                 <div class="mr-auto text-black">
                   <strong class="font-weight-bold mb-0">Võ Quốc Thịnh</strong> <br>
-                  Co-Founder and Developer, Kode Inc.
-                </div>
-              </div>
               <blockquote>&ldquo;Xây dựng ứng dụng trên Terminal theo tôi nó có rất nhiều ưu điểm. Mặc dù vậy nhưng chúng tôi sẽ cố gắng đưa đến cho các bạn một IDE với đầy đủ các công cụ chứ không chỉ dừng lại ở việc dùng lệnh&rdquo;</blockquote>
             </div>
           </div>
@@ -369,7 +366,7 @@
                 </div>
               </div>
               <h2 class="text-black h1">Võ Quốc Thịnh</h2>
-              <span class="sub-title d-block mb-3">Founder, Leader Developer Team</span>
+              <span class="sub-title d-block mb-3">Founder and Leader Kode Project, Developer Team</span>
               <p>Sáng lập, quản lí dự án và lập trình viên trưởng.</p>
             </div>
           </div>
@@ -397,7 +394,7 @@
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="images/truongcc.jpg" alt="Image" class="img-fluid">
+                  <img src="images/neonguyen.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <div class="social">
                   <a href="https://www.facebook.com/profile.php?id=100039568247672"><span class="icon-facebook"></span></a>
@@ -405,17 +402,17 @@
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
-              <h2 class="text-black h1">Nguyễn Đoan Trường</h2>
-              <span class="sub-title d-block mb-3">Editor</span>
-              <p>Đảm đương việc chỉnh sửa, viết bài, làm MC và quảng cáo</p>
+              <h2 class="text-black h1">Nguyễn Quang Anh</h2>
+              <span class="sub-title d-block mb-3">Maketing</span>
+              <p>Maketing</p>
             </div>
           </div>
-<!--
+
          <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up">
             <div class="person">
               <div class="bio-img">
                 <figure>
-                  <img src="images/person_4.jpg" alt="Image" class="img-fluid">
+                  <img src="images/truongcc.jpg" alt="Image" class="img-fluid">
                 </figure>
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
@@ -423,12 +420,12 @@
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
-              <h2 class="text-black h1">Nicolas Stainer</h2>
-              <span class="sub-title d-block mb-3">Financing</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum excepturi corporis qui doloribus perspiciatis ipsa modi accusantium repellat.</p>
+              <h2 class="text-black h1">Nguyễn Đoan Trường</h2>
+              <span class="sub-title d-block mb-3">Editor</span>
+              <p></p>
             </div>
           </div>
-
+<!--
           <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
             <div class="person">
               <div class="bio-img">
@@ -441,6 +438,7 @@
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
+            
               <h2 class="text-black h1">George Brook</h2>
               <span class="sub-title d-block mb-3">Founder</span>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum excepturi corporis qui doloribus perspiciatis ipsa modi accusantium repellat.</p>
@@ -655,9 +653,9 @@
           <div class="col-12">
             <p class="mb-0">
               <a href="https://www.facebook.com/kodestudio.page" class="p-3"><span class="icon-facebook"></span></a>
-              <a href="https://www.twitter.com/kodestudio" class="p-3"><span class="icon-twitter"></span></a>
               <a href="https://www.instagram.com/kodestudio.page" class="p-3"><span class="icon-instagram"></span></a>
               <a href="https://www.github.com/kodestudio" class="p-3"><span class="icon-github"></span></a>
+              <a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A" class="p-3"><span class="icon-youtube"></span></a>
             </p>
           </div>
         </div>
