--- a/donate/index.html
+++ b/donate/index.html
@@ -102,6 +102,12 @@
               <div class="col-lg-6 mr-auto">
                 <h1>Tài trợ cho dự án Kode</h1>
                 <p>Tài trợ để giúp cho dự án Kode phát triển hơn nữa. Bản chất dự án chúng tôi là phát triển dựa trên sự ủng hộ của cộng đồng. Thật tuyệt vời biết bao khi chúng tôi nhận được sự tài trợ từ bạn.</p>
+                <div>
+                  <a href="#phuongthuc" class="btn btn-primary mr-2 mb-2">Các phương thức ủng hộ</a>
+                </div>
+                 <div>
+                  <a href="#nguoi-hung" class="btn btn-primary mr-2 mb-2">Người hùng Kode ❤</a>
+                </div>
               </div>
               
               
@@ -112,7 +118,7 @@
       </div>
     </div>  
 
- <div class="feature-big">
+ <div class="feature-small" id="phuongthuc">
       <div class="container">
         <div class="row mb-5 site-section">
           <div class="col-lg-7" data-aos="fade-right">
@@ -123,6 +129,27 @@
             <p class="mb-4">Do hiện tại chúng tôi vẫn chưa có tài khoản ngân hàng (do chưa có giấy CMND) nên bạn vui lòng tài trợ thông qua Viettel Pay</p>      
           </div>
         </div>
+
+        <div class="site-section" id="nguoi-hung">
+      <div class="container">
+        <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
+          <div class="col-7 text-center  mb-5">
+            <h2 class="section-title">Người hùng Kode</h2>
+            <p class="lead">Kode gửi lời cảm ơn chân thành nhất đến với </p>
+          </div>
+        </div>
+        <div class="author-box" data-aos="fade-left">
+              <div class="d-flex mb-4">
+                <div class="mr-3">
+                  <img src="images/neonguyen.jpg" alt="Image" class="img-fluid rounded-circle">
+                </div>
+                <div class="mr-auto text-black">
+                  <strong class="font-weight-bold mb-0">Nguyễn Quang Anh</strong> <br>
+              <blockquote>&ldquo;Anh Nguyễn Quang Anh đã tài trợ cho Kode 2 tên miền là kodelang.com và kodelang.dev. Không chỉ dừng lại ở việc hỗ trợ tên miền, anh Nguyễn Quang Anh hiện đang làm Marketing tại Kode, tham gia định hướng phát triển và cố vấn cho dự án&rdquo;</blockquote>
+            </div>
+          </div>
+        </div>
+
 
     <div class="site-section bg-image2 overlay" id="contact-section" style="background-image: url('images/hero_1.jpg');">
       <div class="container">
