--- a/donate/index.html
+++ b/donate/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="mr-auto text-black">
                   <strong class="font-weight-bold mb-0">Nguyễn Quang Anh</strong> <br>
-              <blockquote>&ldquo;Anh Nguyễn Quang Anh đã tài trợ cho Kode 2 tên miền là kodelang.com và kodelang.dev. Không chỉ dừng lại ở việc hỗ trợ tên miền, anh Nguyễn Quang Anh hiện đang làm Marketing tại Kode, tham gia định hướng phát triển và cố vấn cho dự án&rdquo;</blockquote>
+              <blockquote>&ldquo;Anh Nguyễn Quang Anh đã tài trợ cho Kode 2 tên miền là kodelang.com và kodelang.dev. Không chỉ dừng lại ở việc hỗ trợ tên miền, anh ấy hiện đang làm Marketing tại Kode, tham gia định hướng phát triển và cố vấn cho dự án&rdquo;</blockquote>
             </div>
           </div>
         </div>
