--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
       </div>
     </div>
-    <div class="feature-big">
+     <div class="feature-big">
       <div class="container">
         <div class="row mb-5 site-section">
           <div class="col-lg-7" data-aos="fade-right">
@@ -230,6 +230,9 @@
                 </div>
                 <div class="mr-auto text-black">
                   <strong class="font-weight-bold mb-0">Võ Quốc Thịnh</strong> <br>
+                  Co-Founder and Developer, Kode Inc.
+                </div>
+              </div>
               <blockquote>&ldquo;Xây dựng ứng dụng trên Terminal theo tôi nó có rất nhiều ưu điểm. Mặc dù vậy nhưng chúng tôi sẽ cố gắng đưa đến cho các bạn một IDE với đầy đủ các công cụ chứ không chỉ dừng lại ở việc dùng lệnh&rdquo;</blockquote>
             </div>
           </div>
