--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
             </div>-->
           </div>
         </div>
+      </div>
 
         <div class="mt-5 row mb-5 site-section ">
           <div class="col-lg-7 order-1 order-lg-2" data-aos="fade-left">
