--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="/images/kode.png">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
@@ -51,7 +52,7 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="service.html">services</a></li>
-                                        <li><a href="Portfolio.html">Portfolio</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
                                         <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="portfolio_details.html">Portfolio details</a></li>
@@ -94,9 +95,7 @@
                     <div class="col-lg-10 col-md-10">
                         <div class="slider_text">
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                Startup you can build a 
-                                website online using the
-                                Bootstrap builder.
+                                Viết mã tức là thay đổi thế giới
                             </h3>
                             <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
                         </div>
@@ -498,7 +497,7 @@
                     <div class="col-lg-2 col-md-3">
                         <div class="footer_logo wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                             <a href="index.html">
-                                <img src="img/logo.png" alt="">
+                                <img src="images/kode.png" width="50" height="50" alt="">
                             </a>
                         </div>
                     </div>
@@ -534,7 +533,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.3s">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://kodelang.dev" target="_blank">Kode</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
